<resources>
    <string name="app_name">enHolic</string>
    <string name="app_intro">English learning app</string>
    <string name="signIn">Sign in</string>
    <string name="signIn_guest">Continue as Guest</string>
    <string name="signIn_register">Don\'t have an account? Register</string>
    <string name="register">Register</string>
    <string name="register_signIn">Already have an account? Sign In</string>
    <string name="register_createAccount">Create an account to track your progress</string>
    <string name="welcome">Welcome back</string>
    <string name="registeredHomepage_lookUp">Look up word</string>
    <string name="registeredHomepage_translate">Translate sentence</string>
    <string name="registeredHomepage_exercise">Do exercises</string>
    <string name="registeredHomepage_reward">Get rewards</string>
    <string name="registeredHomepage_recognize">Recognize letters</string>
    <string name="registeredHomepage_bookmark">View bookmarks</string>
    <string name="registeredHomepage_profile">View profile</string>
    <string name="registeredHomepage_signOut">Sign out</string>
    
    <string-array name="language_options">
        <item>Eng</item>
        <item>Vie</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>