<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_purple"
    tools:context=".views.SignInFragment">


    <ImageView
        android:id="@+id/logo_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/app_base1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_SignIn" />

    <TextView
        android:id="@+id/appIntro_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans_mono"
        android:text="@string/app_intro"
        android:textColor="@color/app_base1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName_SignIn" />

    <ImageView
        android:id="@+id/form_SignIn"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInBtn_SignIn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/signIn"
        android:backgroundTint="@color/app_purple"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBtn_SignIn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/signIn_register"
        android:backgroundTint="@color/app_pink"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guestBtn_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/guestBtn_SignIn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/app_yellow"
        android:text="@string/signIn_guest"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/form_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputPassword_SignIn"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/app_base1"
        android:ems="10"
        android:fontFamily="@font/droid_sans"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signInBtn_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputEmail_SignIn"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/app_base1"
        android:ems="10"
        android:fontFamily="@font/droid_sans"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>