<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_purple"
    tools:context=".views.SignUpFragment">


    <ImageView
        android:id="@+id/logo_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/app_base1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_SignUp" />

    <TextView
        android:id="@+id/appIntro_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans_mono"
        android:text="@string/app_intro"
        android:textColor="@color/app_base1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName_SignUp" />

    <ImageView
        android:id="@+id/form_SignUp"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBtn_SignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:backgroundTint="@color/app_pink"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signInBtn_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInBtn_SignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/app_purple"
        android:text="@string/register_signIn"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/form_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputPassword_SignUp"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/app_base1"
        android:ems="10"
        android:fontFamily="@font/droid_sans"
        android:hint="   Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputEmail_SignUp"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/app_base1"
        android:ems="10"
        android:fontFamily="@font/droid_sans"
        android:hint="   Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputName_SignUp"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_bg"
        android:backgroundTint="@color/app_base1"
        android:ems="10"
        android:fontFamily="@font/droid_sans"
        android:hint="   Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/register_createAccount"
        android:textColor="@color/app_base1"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/form_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>